--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '5.3.0'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -11,13 +16,15 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.27'
-    testImplementation group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'
-    testImplementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
-
+    testImplementation 'com.mysql:mysql-connector-j:8.0.31'
+    testImplementation 'commons-dbutils:commons-dbutils:1.6'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'com.codeborne:selenide:5.19.0'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
