--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
   # строчка -java ,это jar файл,тот что в artifacts
   - sudo apt-get install docker-compose-plugin
-  - docker compose up
+  - docker compose up &
   - java -jar ./artifacts/app-deadline.jar -P:jdbc.url=jdbc:mysql://localhost:3306/database -P:jdbc.user=user -P:jdbc.password=pass -port=7777 &
 
 
